--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.show-sql= true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL = debug
+logging.level.org.hibernate.type = trace
+spring.h2.console.enabled=true
