--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,5 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-logging.level.org.hibernate.SQL = debug
-logging.level.org.hibernate.type = trace
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
+spring.h2.console.path=/h2-console
