--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.operationsSorter=method
+
